tests/snapshots/notelist_all__notelist_Webern_Op5N3_22.snap
---
source: tests/notelist_all.rs
expression: summary
---
=== COMMAND COUNTS ===
BarLine: 23
Beam: 127
BeginPage: 2
Brace: 6
EndPage: 2
LedgerLine: 255
Line: 4
MusicChar: 925
NoteStem: 396
SetMusicSize: 24
SetWidths: 1
Slur: 42
Staff: 24
TextString: 2
TOTAL: 1833

=== STAVES ===
y=72.0 x=[72.0..558.0] lines=5 spacing=6.00
y=132.0 x=[72.0..558.0] lines=5 spacing=6.00
y=192.0 x=[72.0..558.0] lines=5 spacing=6.00
y=252.0 x=[72.0..558.0] lines=5 spacing=6.00
y=247.0 x=[72.0..558.0] lines=5 spacing=6.00
y=307.0 x=[72.0..558.0] lines=5 spacing=6.00
y=367.0 x=[72.0..558.0] lines=5 spacing=6.00
y=427.0 x=[72.0..558.0] lines=5 spacing=6.00
y=422.0 x=[72.0..558.0] lines=5 spacing=6.00
y=482.0 x=[72.0..558.0] lines=5 spacing=6.00
y=542.0 x=[72.0..558.0] lines=5 spacing=6.00
y=602.0 x=[72.0..558.0] lines=5 spacing=6.00
y=72.0 x=[72.0..558.0] lines=5 spacing=6.00
y=132.0 x=[72.0..558.0] lines=5 spacing=6.00
y=192.0 x=[72.0..558.0] lines=5 spacing=6.00
y=252.0 x=[72.0..558.0] lines=5 spacing=6.00
y=247.0 x=[72.0..558.0] lines=5 spacing=6.00
y=307.0 x=[72.0..558.0] lines=5 spacing=6.00
y=367.0 x=[72.0..558.0] lines=5 spacing=6.00
y=427.0 x=[72.0..558.0] lines=5 spacing=6.00
y=422.0 x=[72.0..558.0] lines=5 spacing=6.00
y=482.0 x=[72.0..558.0] lines=5 spacing=6.00
y=542.0 x=[72.0..558.0] lines=5 spacing=6.00
y=602.0 x=[72.0..558.0] lines=5 spacing=6.00

=== BARLINES ===
x=216.4 top=72.0 bottom=96.0
x=323.4 top=72.0 bottom=96.0
x=434.7 top=72.0 bottom=96.0
x=558.0 top=72.0 bottom=96.0
x=203.2 top=247.0 bottom=271.0
x=319.0 top=247.0 bottom=271.0
x=434.3 top=247.0 bottom=271.0
x=558.0 top=247.0 bottom=271.0
x=205.1 top=422.0 bottom=446.0
x=316.7 top=422.0 bottom=446.0
x=429.6 top=422.0 bottom=446.0
x=558.0 top=422.0 bottom=446.0
x=234.6 top=72.0 bottom=96.0
x=354.9 top=72.0 bottom=96.0
x=454.4 top=72.0 bottom=96.0
x=558.0 top=72.0 bottom=96.0
x=194.9 top=247.0 bottom=271.0
x=312.6 top=247.0 bottom=271.0
x=429.6 top=247.0 bottom=271.0
x=558.0 top=247.0 bottom=271.0
x=274.2 top=422.0 bottom=446.0
x=412.9 top=422.0 bottom=446.0
x=558.0 top=422.0 bottom=446.0

=== BEAMS ===
x=[394.2..422.8] y=[221.0..222.9] slope=0.068 thick=3.00
x=[394.2..422.8] y=[162.0..162.0] slope=0.000 thick=3.00
x=[394.2..422.8] y=[99.0..101.9] slope=0.103 thick=3.00
x=[470.8..485.6] y=[210.0..208.0] slope=-0.136 thick=3.00
x=[456.1..485.6] y=[99.9..103.9] slope=0.136 thick=3.00
x=[500.3..529.8] y=[93.0..93.0] slope=0.000 thick=3.00
x=[500.3..545.9] y=[228.0..224.1] slope=-0.086 thick=3.00
x=[176.0..191.7] y=[339.0..340.9] slope=0.124 thick=3.00
x=[161.7..191.7] y=[259.0..259.0] slope=0.000 thick=3.00
x=[210.1..252.1] y=[405.0..402.0] slope=-0.071 thick=3.00
x=[210.1..252.1] y=[340.0..339.0] slope=-0.024 thick=3.00
x=[279.8..307.4] y=[388.0..388.0] slope=0.000 thick=3.00
x=[279.8..307.4] y=[334.0..333.0] slope=-0.036 thick=3.00
x=[279.8..307.4] y=[268.0..267.0] slope=-0.036 thick=3.00
x=[356.6..370.9] y=[435.0..434.0] slope=-0.070 thick=3.00
x=[335.6..364.2] y=[267.0..268.9] slope=0.068 thick=3.00
x=[385.2..429.5] y=[413.1..408.1] slope=-0.112 thick=3.00
x=[378.5..422.8] y=[283.0..285.9] slope=0.066 thick=3.00
x=[455.5..483.2] y=[385.0..383.0] slope=-0.072 thick=3.00
x=[462.2..489.9] y=[289.1..283.1] slope=-0.214 thick=3.00
x=[455.5..483.2] y=[277.0..271.1] slope=-0.214 thick=3.00
x=[510.9..539.4] y=[469.0..459.1] slope=-0.346 thick=3.00
x=[99.5..112.9] y=[457.0..458.9] slope=0.144 thick=3.00
x=[119.7..146.2] y=[532.0..531.0] slope=-0.038 thick=3.00
x=[119.7..146.2] y=[485.0..486.0] slope=0.038 thick=3.00
x=[159.2..200.9] y=[536.0..539.9] slope=0.094 thick=3.00
x=[159.2..200.9] y=[485.0..487.0] slope=0.048 thick=3.00
x=[165.9..194.2] y=[455.0..455.0] slope=0.000 thick=3.00
x=[218.3..231.8] y=[413.0..416.0] slope=0.223 thick=3.00
x=[231.8..258.2] y=[545.0..546.0] slope=0.038 thick=3.00
x=[231.8..258.2] y=[488.0..488.0] slope=0.000 thick=3.00
x=[291.0..305.8] y=[629.0..627.0] slope=-0.135 thick=3.00
x=[284.3..312.6] y=[465.1..460.1] slope=-0.175 thick=3.00
x=[329.9..370.3] y=[589.0..586.1] slope=-0.073 thick=3.00
x=[356.9..370.3] y=[534.0..532.1] slope=-0.144 thick=3.00
x=[329.9..370.3] y=[464.0..470.9] slope=0.172 thick=3.00
x=[383.8..425.5] y=[533.3..534.3] slope=0.024 thick=3.00
x=[390.5..418.8] y=[466.9..472.9] slope=0.210 thick=3.00
x=[436.1..478.7] y=[446.0..442.1] slope=-0.093 thick=3.00
x=[478.7..472.7] y=[437.6..437.6] slope=-0.000 thick=3.00
x=[518.7..532.1] y=[626.0..624.0] slope=-0.149 thick=3.00
x=[511.9..538.9] y=[467.0..472.9] slope=0.220 thick=3.00
x=[518.7..546.9] y=[434.0..434.0] slope=0.000 thick=3.00
x=[546.9..540.9] y=[429.5..429.5] slope=-0.000 thick=3.00
x=[105.8..130.6] y=[123.0..124.0] slope=0.040 thick=3.00
x=[99.0..136.3] y=[291.0..282.1] slope=-0.240 thick=3.00
x=[123.9..148.8] y=[84.0..84.0] slope=0.000 thick=3.00
x=[148.8..142.8] y=[79.5..79.5] slope=-0.000 thick=3.00
x=[161.2..198.5] y=[225.0..219.1] slope=-0.159 thick=3.00
x=[173.6..210.9] y=[282.0..276.1] slope=-0.159 thick=3.00
x=[161.2..224.6] y=[95.2..93.2] slope=-0.032 thick=3.00
x=[186.1..180.1] y=[89.9..89.9] slope=-0.000 thick=3.00
x=[224.6..218.6] y=[88.8..88.8] slope=-0.000 thick=3.00
x=[240.6..277.9] y=[84.0..84.0] slope=0.000 thick=3.00
x=[265.5..259.5] y=[79.5..79.5] slope=-0.000 thick=3.00
x=[253.1..290.3] y=[231.0..226.1] slope=-0.133 thick=3.00
x=[325.6..351.6] y=[108.0..118.9] slope=0.417 thick=3.00
x=[376.1..400.9] y=[249.0..250.0] slope=0.040 thick=3.00
x=[413.0..451.1] y=[249.0..249.0] slope=0.000 thick=3.00
x=[425.4..451.1] y=[188.0..187.0] slope=-0.039 thick=3.00
x=[425.4..451.1] y=[138.0..139.0] slope=0.039 thick=3.00
x=[467.1..504.4] y=[249.0..249.0] slope=0.000 thick=3.00
x=[479.6..504.4] y=[186.0..188.0] slope=0.080 thick=3.00
x=[479.6..504.4] y=[135.0..136.0] slope=0.040 thick=3.00
x=[516.4..554.6] y=[249.0..249.0] slope=0.000 thick=3.00
x=[522.1..547.8] y=[231.0..227.1] slope=-0.153 thick=3.00
x=[528.9..554.6] y=[121.1..116.1] slope=-0.192 thick=3.00
x=[101.9..136.0] y=[424.0..424.0] slope=0.000 thick=3.00
x=[106.6..129.2] y=[388.0..387.0] slope=-0.044 thick=3.00
x=[106.6..129.2] y=[338.0..339.0] slope=0.044 thick=3.00
x=[151.2..162.2] y=[388.0..387.0] slope=-0.091 thick=3.00
x=[151.2..162.2] y=[338.0..339.0] slope=0.091 thick=3.00
x=[147.0..180.0] y=[424.0..424.0] slope=0.000 thick=3.00
x=[207.1..241.2] y=[424.0..424.0] slope=0.000 thick=3.00
x=[223.1..234.5] y=[400.0..398.0] slope=-0.176 thick=3.00
x=[218.5..241.2] y=[303.0..306.9] slope=0.173 thick=3.00
x=[223.1..245.9] y=[265.0..264.0] slope=-0.044 thick=3.00
x=[245.9..239.9] y=[259.5..259.5] slope=-0.000 thick=3.00
x=[264.0..297.7] y=[424.0..424.0] slope=0.000 thick=3.00
x=[264.0..297.7] y=[352.0..352.0] slope=0.000 thick=3.00
x=[264.0..297.7] y=[301.0..301.0] slope=0.000 thick=3.00
x=[279.9..303.4] y=[269.0..270.0] slope=0.043 thick=3.00
x=[303.4..297.4] y=[265.5..265.5] slope=-0.000 thick=3.00
x=[324.8..358.6] y=[424.0..424.0] slope=0.000 thick=3.00
x=[324.8..358.6] y=[352.0..352.0] slope=0.000 thick=3.00
x=[324.8..358.6] y=[301.0..301.0] slope=0.000 thick=3.00
x=[340.8..363.2] y=[272.0..273.0] slope=0.045 thick=3.00
x=[363.2..357.2] y=[268.5..268.5] slope=-0.000 thick=3.00
x=[381.3..414.6] y=[424.0..424.0] slope=0.000 thick=3.00
x=[381.3..414.6] y=[352.0..352.0] slope=0.000 thick=3.00
x=[381.3..414.6] y=[301.0..301.0] slope=0.000 thick=3.00
x=[396.9..420.4] y=[269.0..270.0] slope=0.043 thick=3.00
x=[420.4..414.4] y=[265.5..265.5] slope=-0.000 thick=3.00
x=[441.8..475.5] y=[424.0..424.0] slope=0.000 thick=3.00
x=[441.8..475.5] y=[349.7..350.7] slope=0.030 thick=3.00
x=[441.8..475.5] y=[298.0..298.0] slope=0.000 thick=3.00
x=[457.8..480.1] y=[269.0..270.0] slope=0.045 thick=3.00
x=[480.1..474.1] y=[265.5..265.5] slope=-0.000 thick=3.00
x=[498.2..542.9] y=[424.0..424.0] slope=0.000 thick=3.00
x=[498.2..542.9] y=[349.0..349.0] slope=0.000 thick=3.00
x=[498.2..542.9] y=[298.0..298.0] slope=0.000 thick=3.00
x=[491.5..548.7] y=[262.0..262.0] slope=0.000 thick=3.00
x=[513.9..507.9] y=[257.5..257.5] slope=-0.000 thick=3.00
x=[548.7..542.7] y=[257.5..257.5] slope=-0.000 thick=3.00
x=[101.6..137.2] y=[437.0..436.0] slope=-0.028 thick=3.00
x=[137.2..131.2] y=[431.5..431.5] slope=-0.000 thick=3.00
x=[108.4..179.1] y=[599.0..599.0] slope=0.000 thick=3.00
x=[108.4..179.1] y=[524.0..524.0] slope=0.000 thick=3.00
x=[108.4..179.1] y=[473.0..473.0] slope=0.000 thick=3.00
x=[189.6..224.8] y=[434.0..434.0] slope=0.000 thick=3.00
x=[224.8..218.8] y=[429.5..429.5] slope=-0.000 thick=3.00
x=[196.4..266.6] y=[599.0..599.0] slope=0.000 thick=3.00
x=[196.4..266.6] y=[524.0..524.0] slope=0.000 thick=3.00
x=[196.4..266.6] y=[473.0..473.0] slope=0.000 thick=3.00
x=[282.9..300.7] y=[614.0..614.0] slope=0.000 thick=3.00
x=[282.9..300.7] y=[571.0..572.9] slope=0.109 thick=3.00
x=[282.9..300.7] y=[508.0..509.9] slope=0.109 thick=3.00
x=[282.9..300.7] y=[434.0..434.0] slope=0.000 thick=3.00
x=[343.9..398.5] y=[614.0..614.0] slope=0.000 thick=3.00
x=[343.9..398.5] y=[571.0..572.9] slope=0.035 thick=3.00
x=[343.9..398.5] y=[508.0..509.9] slope=0.035 thick=3.00
x=[343.9..398.5] y=[434.0..434.0] slope=0.000 thick=3.00
x=[421.6..457.2] y=[641.9..648.9] slope=0.195 thick=3.00
x=[428.3..463.9] y=[527.0..534.9] slope=0.223 thick=3.00
x=[428.3..463.9] y=[464.0..471.9] slope=0.223 thick=3.00
x=[421.6..457.2] y=[453.9..458.9] slope=0.139 thick=3.00
x=[515.8..550.2] y=[614.0..614.0] slope=0.000 thick=3.00

=== STEMS: 396 total ===

=== GLYPHS ===
Smufl(57424): 12
Smufl(57436): 6
Smufl(57442): 6
Smufl(57474): 8
Smufl(57508): 396
Smufl(57813): 1
Smufl(57831): 22
Smufl(57920): 10
Smufl(57921): 12
Smufl(57922): 6
Smufl(57923): 1
Smufl(57952): 56
Smufl(57953): 152
Smufl(57954): 69
Smufl(58595): 6
Smufl(58596): 19
Smufl(58597): 33
Smufl(58598): 108
Smufl(58599): 1
Smufl(59523): 1
