tests/snapshots/notelist_all__notelist_accidentals.snap
---
source: tests/notelist_all.rs
expression: summary
---
=== COMMAND COUNTS ===
BarLine: 4
Beam: 4
BeginPage: 1
EndPage: 1
LedgerLine: 1
MusicChar: 36
NoteStem: 18
SetMusicSize: 1
SetWidths: 1
Staff: 1
TOTAL: 68

=== STAVES ===
y=72.0 x=[72.0..558.0] lines=5 spacing=6.00

=== BARLINES ===
x=221.3 top=72.0 bottom=96.0
x=328.2 top=72.0 bottom=96.0
x=388.9 top=72.0 bottom=96.0
x=558.0 top=72.0 bottom=96.0

=== BEAMS ===
x=[405.2..425.1] y=[56.1..49.1] slope=-0.350 thick=3.00
x=[444.9..464.8] y=[75.0..75.0] slope=0.000 thick=3.00
x=[484.6..507.0] y=[66.0..67.0] slope=0.045 thick=3.00
x=[520.1..541.9] y=[99.0..99.0] slope=0.000 thick=3.00

=== STEMS: 18 total ===

=== GLYPHS ===
Smufl(57424): 1
Smufl(57476): 2
Smufl(57507): 2
Smufl(57508): 16
Smufl(57952): 4
Smufl(57953): 3
Smufl(57954): 4
Smufl(57955): 2
Smufl(57956): 2
