tests/snapshots/notelist_all__notelist_chord_seconds.snap
---
source: tests/notelist_all.rs
expression: summary
---
=== COMMAND COUNTS ===
BarLine: 10
Beam: 3
BeginPage: 1
EndPage: 1
LedgerLine: 26
MusicChar: 130
NoteStem: 43
SetMusicSize: 3
SetWidths: 1
Staff: 3
TextString: 1
TOTAL: 222

=== STAVES ===
y=72.0 x=[72.0..558.0] lines=5 spacing=6.00
y=247.0 x=[72.0..558.0] lines=5 spacing=6.00
y=422.0 x=[72.0..558.0] lines=5 spacing=6.00

=== BARLINES ===
x=241.8 top=72.0 bottom=96.0
x=366.6 top=72.0 bottom=96.0
x=488.2 top=72.0 bottom=96.0
x=558.0 top=72.0 bottom=96.0
x=195.8 top=247.0 bottom=271.0
x=447.9 top=247.0 bottom=271.0
x=502.9 top=247.0 bottom=271.0
x=558.0 top=247.0 bottom=271.0
x=325.5 top=422.0 bottom=446.0
x=558.0 top=422.0 bottom=446.0

=== BEAMS ===
x=[209.6..245.5] y=[249.0..248.0] slope=-0.028 thick=3.00
x=[281.4..317.2] y=[243.0..242.0] slope=-0.028 thick=3.00
x=[353.1..388.9] y=[237.0..236.0] slope=-0.028 thick=3.00

=== STEMS: 43 total ===

=== GLYPHS ===
Smufl(57424): 3
Smufl(57476): 2
Smufl(57506): 18
Smufl(57507): 35
Smufl(57508): 71
Smufl(57920): 1
