tests/snapshots/notelist_all__notelist_grace_notes_test.snap
---
source: tests/notelist_all.rs
expression: summary
---
=== COMMAND COUNTS ===
BarLine: 3
BeginPage: 1
EndPage: 1
LedgerLine: 1
Line: 5
MusicChar: 25
NoteStem: 16
SetMusicSize: 1
SetWidths: 1
Staff: 1
TOTAL: 55

=== STAVES ===
y=72.0 x=[72.0..558.0] lines=5 spacing=6.00

=== BARLINES ===
x=272.0 top=72.0 bottom=96.0
x=402.9 top=72.0 bottom=96.0
x=558.0 top=72.0 bottom=96.0

=== BEAMS ===

=== STEMS: 16 total ===

=== GLYPHS ===
Smufl(57424): 1
Smufl(57476): 2
Smufl(57507): 1
Smufl(57508): 15
Smufl(57920): 4
Smufl(57921): 1
Smufl(57954): 1
