tests/snapshots/notelist_all__notelist_keysig_d_major.snap
---
source: tests/notelist_all.rs
expression: summary
---
=== COMMAND COUNTS ===
BarLine: 2
MusicChar: 13
NoteStem: 8
SetWidths: 1
Staff: 1
TOTAL: 25

=== STAVES ===
y=72.0 x=[72.0..558.0] lines=5 spacing=6.00

=== BARLINES ===
x=347.2 top=72.0 bottom=96.0
x=558.0 top=72.0 bottom=96.0

=== BEAMS ===

=== STEMS: 8 total ===

=== GLYPHS ===
Smufl(57424): 1
Smufl(57476): 2
Smufl(57508): 8
Smufl(57954): 2
